objects/vlocity_ins__Drug__c.object
<CustomObject>
    <description>A prescription or over the counter (OTC) medicine. This object is designed to accept data loaded from a validated external source such as the US FDA&apos;s National Drug Code Directory.</description>
    <fields>
        <fullName>vlocity_ins__ActiveIngredientUnit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Active Ingredient  Unit</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ActiveNumeratorStrength__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Active Numerator Strength</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AdministrationMethod__c</fullName>
        <label>Administration Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Oral</fullName>
                </value>
                <value>
                    <fullName>Topical</fullName>
                </value>
                <value>
                    <fullName>Subcutaneous</fullName>
                </value>
                <value>
                    <fullName>Intravenous</fullName>
                </value>
                <value>
                    <fullName>Urethral</fullName>
                </value>
                <value>
                    <fullName>Intramuscular</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__CompanyName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Company Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DosageForm__c</fullName>
        <label>Dosage Form</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Injection</fullName>
                </value>
                <value>
                    <fullName>Solution</fullName>
                </value>
                <value>
                    <fullName>Capsule</fullName>
                </value>
                <value>
                    <fullName>Gel</fullName>
                </value>
                <value>
                    <fullName>Tablet</fullName>
                </value>
                <value>
                    <fullName>Kit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__DosageUnit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Dosage Unit</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DrugClassification__c</fullName>
        <description>A drug may be classified by the chemical type of the active ingredient or by the way it is used to treat a particular condition. Each drug can be classified into one or more drug classes.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Drug Classification</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DrugFormula__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Drug Formula</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DrugStatus__c</fullName>
        <label>Drug Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prescription</fullName>
                </value>
                <value>
                    <fullName>OTC</fullName>
                </value>
                <value>
                    <fullName>Discontinued</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__GenericName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Generic Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ImprintCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Imprint Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsCombinationDrug__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Combination Drug</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsControlledSubstance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Controlled Substance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsPregnancySafe__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Pregnancy Safe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsProtectedClass__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Protected Class</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__MarketingEndDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Marketing End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__MarketingStartDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Marketing Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Method__c</fullName>
        <description>A method, or route, of administration is the way the drug is taken into the body. Methods are usually classified by the location where the substance is applied, such as orally or intravenously.</description>
        <inlineHelpText>A method, or route, of administration is the way the drug is taken into the body. Methods are usually classified by the location where the substance is applied, such as orally or intravenously.</inlineHelpText>
        <label>Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Buccal mucosa</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Epidural</fullName>
                </value>
                <value>
                    <fullName>Gingival</fullName>
                </value>
                <value>
                    <fullName>Implantation</fullName>
                </value>
                <value>
                    <fullName>Inhalation</fullName>
                </value>
                <value>
                    <fullName>Injection</fullName>
                </value>
                <value>
                    <fullName>Intracavernosal</fullName>
                </value>
                <value>
                    <fullName>Intradermal</fullName>
                </value>
                <value>
                    <fullName>Intramuscular</fullName>
                </value>
                <value>
                    <fullName>Intraocular</fullName>
                </value>
                <value>
                    <fullName>Intrapleural</fullName>
                </value>
                <value>
                    <fullName>Intrathecal</fullName>
                </value>
                <value>
                    <fullName>Intratracheal</fullName>
                </value>
                <value>
                    <fullName>Intratympanic</fullName>
                </value>
                <value>
                    <fullName>Intrauterine</fullName>
                </value>
                <value>
                    <fullName>Intravenous</fullName>
                </value>
                <value>
                    <fullName>Irrigation</fullName>
                </value>
                <value>
                    <fullName>Multiple Routes</fullName>
                </value>
                <value>
                    <fullName>Nasal</fullName>
                </value>
                <value>
                    <fullName>Ophthalmic</fullName>
                </value>
                <value>
                    <fullName>Oral</fullName>
                </value>
                <value>
                    <fullName>Oromucosal</fullName>
                </value>
                <value>
                    <fullName>Otic</fullName>
                </value>
                <value>
                    <fullName>Rectal</fullName>
                </value>
                <value>
                    <fullName>Subcutaneous</fullName>
                </value>
                <value>
                    <fullName>Sublingual</fullName>
                </value>
                <value>
                    <fullName>Topical application</fullName>
                </value>
                <value>
                    <fullName>Transdermal</fullName>
                </value>
                <value>
                    <fullName>Urethral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__NationalDrugCode__c</fullName>
        <description>The NDC, or National Drug Code, is a unique 10-digit, 3-segment number. It is a universal product identifier for human drugs in the United States. The code is present on all nonprescription (OTC) and prescription medication packages and inserts in the US. This field is a unique record identifier from an external system. Duplicate values are not allowed.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>The NDC, or National Drug Code, is a unique 10-digit, 3-segment number. It is a universal product identifier for human drugs in the United States. The code is present on all nonprescription (OTC) and prescription medication packages and inserts in the US.</inlineHelpText>
        <label>National Drug Code</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RXCUINumber__c</fullName>
        <description>RxNorm concept unique identifier (RXCUI):RxNorm is a normalized naming system created by National Library of Medicine for generic and branded drugs and a tool for supporting semantic interoperation between drug terminologies and pharmacy knowledge base systems. This field is a unique record identifier from an external system. Duplicate values are not allowed.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>RxNorm concept unique identifier</inlineHelpText>
        <label>RXCUI Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SubstanceNameList__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Substance Name List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TradeName__c</fullName>
        <description>Trade name (Including Suffix XR/PM)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Trade Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__UnitOfMeasurement__c</fullName>
        <description>The Dosage can be expressed in Units, such as the weight of drug (e.g. 250 mg), volume of drug solution (e.g. 10 mL, 2 drops), the number of dosage forms (e.g. 1 capsule, 1 suppository) or some other quantity (e.g. 2 puffs).</description>
        <inlineHelpText>The Dosage can be expressed in Units, such as the weight of drug (e.g. 250 mg), volume of drug solution (e.g. 10 mL, 2 drops), the number of dosage forms (e.g. 1 capsule, 1 suppository) or some other quantity (e.g. 2 puffs).</inlineHelpText>
        <label>Unit of Measure (UOM)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>%</fullName>
                </value>
                <value>
                    <fullName>Amb</fullName>
                </value>
                <value>
                    <fullName>BAU</fullName>
                </value>
                <value>
                    <fullName>CELLS/ML</fullName>
                </value>
                <value>
                    <fullName>IR</fullName>
                </value>
                <value>
                    <fullName>MCI/ML</fullName>
                </value>
                <value>
                    <fullName>MEQ</fullName>
                </value>
                <value>
                    <fullName>MEQ/MG</fullName>
                </value>
                <value>
                    <fullName>MEQ/ML</fullName>
                </value>
                <value>
                    <fullName>MG</fullName>
                </value>
                <value>
                    <fullName>MG/ACTUAT</fullName>
                </value>
                <value>
                    <fullName>MG/HR</fullName>
                </value>
                <value>
                    <fullName>MG/MG</fullName>
                </value>
                <value>
                    <fullName>MG/ML</fullName>
                </value>
                <value>
                    <fullName>MG/SQCM</fullName>
                </value>
                <value>
                    <fullName>ML</fullName>
                </value>
                <value>
                    <fullName>ML/ML</fullName>
                </value>
                <value>
                    <fullName>UNT</fullName>
                </value>
                <value>
                    <fullName>UNT/MG</fullName>
                </value>
                <value>
                    <fullName>UNT/ML</fullName>
                </value>
                <value>
                    <fullName>Picklist</fullName>
                </value>
                <value>
                    <fullName>Buccal mucosa</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Epidural</fullName>
                </value>
                <value>
                    <fullName>Gingival</fullName>
                </value>
                <value>
                    <fullName>Implantation</fullName>
                </value>
                <value>
                    <fullName>Inhalation</fullName>
                </value>
                <value>
                    <fullName>Injection</fullName>
                </value>
                <value>
                    <fullName>Intracavernosal</fullName>
                </value>
                <value>
                    <fullName>Intradermal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Drug</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <columns>NAME</columns>
        <columns>vlocity_ins__RXCUINumber__c</columns>
        <columns>vlocity_ins__Method__c</columns>
        <columns>vlocity_ins__UnitOfMeasurement__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Drugs</label>
    </listViews>
    <listViews>
        <fullName>vlocity_ins__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>vlocity_ins__StepTherapy</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Drugs (with Step Therapy)</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Drug Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Drugs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>